--- a/client/modules/Lane/Lane.css
+++ b/client/modules/Lane/Lane.css
@@ -1,5 +1,48 @@
-/* Lane styles */
 .AddLane {
     padding: 10px;
     margin-bottom: 50px;
+    cursor: pointer;
+}
+.appDiv {
+    text-align: center;
+}
+.lanes {
+    display: flex;
+    justify-content: space-around;
+}
+.Lane {
+    padding: 20px;
+    background-color: #F0F8FF;
+    border: 1px solid;
+    width: 250px;
+    position: relative;
+}
+.LaneDelete {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.LaneDelete button {
+    background-color: transparent;
+    border: none;
+    padding: 5px;
+    font-weight: bold;
+}
+.LaneDelete button:hover {
+    color: red;
+    cursor: pointer;
+}
+.LaneName, .LaneAddNote {
+    margin-bottom: 20px;
+}
+.LaneAddNote button {
+    padding: 5px;
+    cursor: pointer;
+}
+.LaneName {
+    height: 24px;
+}
+.LaneName:hover {
+    cursor: pointer;
+    color: blue;
 }
